k8s-cluster/manifests/27-testing/load-testing/01-namespace.yaml
---
# Namespace for load testing
apiVersion: v1
kind: Namespace
metadata:
  name: load-testing
  labels:
    name: load-testing
